<resources>
    <string name="app_name" translatable="false">GrouProject</string>
    <string name="nullNumber">nullNumber</string>

   
    <string name="TitleStation">لقب</string>
    <string name="latitude">خط العرض</string>
    <string name="longitude">خط الطول</string>

    <string name="author_name">Wentao Lu</string>
    <string name="top_title">Soccer News</string>
    <string name="news_detail">News Detail</string>
    <string name="saved_button">FAVORITE</string>
    <string name="save">SAVE</string>
    <string name="unsave">UNSAVE</string>
    <string name="open_in_browser">OPEN IN BROWSER</string>
    <string name="article_saved_notice">Article is saved to your list!</string>
    <string name="article_removed_notice">Article is removed from your list!</string>
    <string name="article_delete_confirm">Delete it from your favorite list?</string>
    <string name="email_address_prompt">Enter your email address: </string>
    <string name="email_placeholder">Type your email here</string>
    <string name="password_prompt">Enter your password:</string>
    <string name="password_placeholder">Type your password here</string>
    <string name="login_button">LOGIN</string>
    <string name="go_back_button">GO BACK</string>
    <string name="incorrect_email_alert">Invalid email format. Please try again!</string>
    <string name="ok">OK</string>
    <string name="yes">yes</string>
    <string name="no">NO</string>
    <string name="alert">ALERT</string>
    <string name="welcome">welcome!</string>
    <string name="guide">1. This main page shows you all the news. You can click any of them for the detail. 2. Inside the detail page. you can save or unsave the article, or you can open the page in browser. 3. Click "SAVED" to see saved articles. 3. </string>
    <string name="guide_button">GUIDE</string>
    <string name="welcome_title">Soccer News</string>
    <string name="welcome_subtitle">See for yourself</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="rating_goes_here">Rating goes here</string>
    <string name="runtime_goes_here">Runtime goes here</string>
    <string name="plot_goes_here">Plot goes here</string>
    <string name="actors_goes_here">Actors goes here</string>
    <string name="delete">DELETE</string>
    <string name="octranspo_bus_route">OCTranspo Bus Route</string>
    <string name="electric_car_charging_station_finder">Electric Car Charging Station Finder</string>
    <string name="movie_information">Movie Information</string>
    <string name="soccer_games_api">Soccer Games API</string>
    <string name="search_for_more_movies">Search for more movies</string>
    <string name="type_movie_name">Type in the name of a movie:</string>
    <string name="search">SEARCH</string>
    <string name="title_goes_here">Title goes here</string>
    <string name="year_goes_here">Year goes here</string>
    <string name="save_movie">SAVE MOVIE</string>

    <string name= "bus_addButton">Add Stop </string>
    <string name= "bus_helpButton">Help Center</string>
    <string name ="BackButton">Back</string>
    <string name ="route_text">Route:</string>
    <string name = "oc_wrong_input">Wrong Input</string>
    <string name = "bus_adjustedTime">Adjusted Time</string>
    <string name = "bus_coordinates">Current coordinates</string>
    <string name = "bus_speed">Current Speed</string>
    <string name = "bus_avgAdjustedTime">Current Speed</string>
    <string name = "bus_startTime">Current Speed</string>
    <string name = "bus_Destination">Current Speed</string>
    <string name ="bus_deletestationbutton">Delete Station</string>
    <string name="busBackButton">Back</string>
    <string name="soccer_info">Soccer News | Author: Wentao Lu | V1.0</string>

</resources>